[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"
[project]
name = "do_lambda_test"
version = "0.1.0"
description = "do_lambda_test deployment."
requires-python = ">=3.12"
license = { file = "LICENSE.txt" }
keywords = ["template",]
authors = [{ name = "Micah Norman", email = "minoad@gmail.com" }]
maintainers = [{ name = "Micah Norman", email = "minoad@gmail.com" }]
dependencies = [
    'httpx'
]

[project.optional-dependencies]
dev = [
    "debugpy",
    "pylint",
    "toml",
    "yapf",
    "colorama",
    "isort",
    "black",
    "mypy",
    "pytest",
    "mypy-extensions",
    "flask",
]
test = ["pytest < 5.0.0", "pytest-cov[all]"]
cli = ["click", "rich"]
all = ["do_lambda_test[test, dev, cli]"]

[project.urls]
homepage = "https://example.com"
documentation = "https://readthedocs.org"
repository = "https://github.com/minoad/do_lambda_test"
changelog = "https://github.com/minoad/do_lambda_test/CHANGELOG.md"

[tool.mypy]
warn_unreachable = true
show_error_codes = true
show_column_numbers = true
[tool.pytest.ini_options]
addopts = "--strict-config --strict-markers"

[tool.isort]
profile = "black"

[tool.black]
line-length = 120
target-version = ['py312']
include = '\.pyi?$'
preview = true

[tool.pylint.format]
max-line-length = "120"

[tool.pylint.'MESSAGES CONTROL']
max-line-length = 120

# [project.scripts]
# do_lambda_test-cli = "do_lambda_test-cli:main_cli"
# #Equivilent to `from spam import main_cli; main_cli()`
# #Touch do_lambda_test/__init__.py
# # echo 'def main_cli(): pass' >> do_lambda_test/__init__.py

# [project.gui-scripts]
# do_lambda_test-gui = "do_lambda_test-gui:main_cli"
# # echo 'def main_gui(): pass' >> do_lambda_test/__init__.py

# # Deploy using pip install -e .[all]